Leak: Accelerated ImageBufferCairo doesn't destroy the used textures https://bugs.webkit.org/show_bug.cgi?id=155431

Patch by Miguel Gomez <magomez@igalia.com> on 2016-03-15
Reviewed by Žan Doberšek.

When using the Cairo backend, add a destructor to ImageBufferData and use it to destroy the
textures created if the buffer is being accelerated.

No new tests, already covered by existing ones.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBufferData::ImageBufferData):
Store the renderingMode flag.
(WebCore::ImageBufferData::~ImageBufferData):
Destroy gl resources if renderingMode is accelerated.
(WebCore::ImageBuffer::ImageBuffer):
Pass renderingMode to the data class and use it fro checks instead of the function parameter.
* platform/graphics/cairo/ImageBufferDataCairo.h:
Add destructor and a renderingMode flag.

Canonical link: https://commits.webkit.org/173609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198205 268f45cc-cd09-0410-ab3c-d52691b4dbfc